--- a/wp-content/themes/stacylauren/sass/typography/_typography.scss
+++ b/wp-content/themes/stacylauren/sass/typography/_typography.scss
@@ -70,15 +70,18 @@ textarea {
 
 .button {
     @include button(white, white);
+    display: inline-block;
     font-family: $secondary-font;
     background-color: transparent;
     margin: 1em;
-    /*width: 200px;*/
+    padding: .5em 1em;
+    width: auto;
     height: auto;
     text-transform: uppercase;
     font-size: 1.2em;
     font-weight: 400;
     letter-spacing: .1em;
+    border-radius: 2px; 
 
     p {
         font-family: $secondary-font;
