--- a/wp-content/themes/stacylauren/sass/site/secondary/_widgets.scss
+++ b/wp-content/themes/stacylauren/sass/site/secondary/_widgets.scss
@@ -8,14 +8,26 @@
 	
 }
 
+.widget-area {
+	ul {
+		list-style-type: none;
+		margin-left: 0 !important;
+		padding: 0;
+		li {
+			margin: 0 !important;
+			padding: 0 !important;
+		}
+	}
+}
+
 .widget_categories {
 	ul {
 		list-style-type: none;
-		margin: auto 0;
-		padding: 0;
+		margin: auto 0 !important;
+		padding: 0 !important;
 		li {
 			display: inline-block;
-			margin: .25em .25em .25em 0;
+			margin: .25em .25em .25em 0 !important;
 			a {
 				color: $medgray;
 				background: $lightgray;
@@ -36,4 +48,5 @@
 .widget-title {
 	font-size: 1.2em;
 	color: $green;
+	font-weight: 800;
 }
