--- a/wp-content/themes/stacylauren/sass/site/secondary/_widgets.scss
+++ b/wp-content/themes/stacylauren/sass/site/secondary/_widgets.scss
@@ -20,7 +20,7 @@
 	}
 }
 
-.widget_categories {
+.widget_categories, .widget_archive, .widget_tags {
 	ul {
 		list-style-type: none;
 		margin: auto 0 !important;
