--- a/wp-content/themes/stacylauren/sass/forms/_buttons.scss
+++ b/wp-content/themes/stacylauren/sass/forms/_buttons.scss
@@ -2,7 +2,30 @@ button,
 input[type="button"],
 input[type="reset"],
 input[type="submit"] {
-	border: 1px solid;
+    display: inline-block;
+    font-family: $secondary-font;
+    font-size: 1em;
+    background-color: $lime-green;
+    color: black;
+    margin: 0;
+    padding: .25em .5em;
+    width: auto;
+    height: auto;
+    font-weight: 800;
+    border-style: none;
+    
+    
+	&:hover {
+		background: $darkgray;
+		color: white;
+	}
+
+	&:active,
+	&:focus {
+		border-color: black;
+	}   
+   
+/*	border: 1px solid;
 	border-color: $color__border-button;
 	border-radius: 3px;
 	background: $color__background-button;
@@ -18,5 +41,51 @@ input[type="submit"] {
 	&:active,
 	&:focus {
 		border-color: $color__border-button-focus;
+	}*/
+}
+
+.button {
+    @include button(white, white);
+    display: inline-block;
+    font-family: $secondary-font;
+    background-color: transparent;
+    margin: 1em;
+    padding: .5em 1em;
+    width: auto;
+    height: auto;
+    text-transform: uppercase;
+    font-size: 1.2em;
+    font-weight: 400;
+    letter-spacing: .1em;
+    border-radius: 2px; 
+
+    p {
+        font-family: $secondary-font;
+        text-transform: uppercase;
+        font-size: 1em;
+        font-weight: 700;
+        letter-spacing: .1em;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        /*padding: 6px 2px;*/
+    }
+    a {
+        color: white;
+        text-decoration: none;
+        :hover, :active, :focus {
+            color: $green !important;
+            text-decoration: none;
+        }
+    }    
+}
+
+.button:hover, .button:active, .button:focus {
+	color: $green;
+	a {
+	    color: $green;
 	}
 }
+
