--- a/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
+++ b/wp-content/themes/stacylauren/sass/variables-site/_colors.scss
@@ -6,8 +6,8 @@ $color__background-pre: #eee;
 $color__background-ins: #fff9c0;
 
 $color__text-screen: #21759b;
-$color__text-input: #666;
-$color__text-input-focus: #111;
+$color__text-input: #626262;
+$color__text-input-focus: #78A22F;
 $color__link: white;
 $color__link-visited: white;
 $color__link-hover: #78A22F;
