fixed archive page and content partials

--- a/wp-content/themes/stacylauren/sass/site/primary/_comments.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_comments.scss
@@ -1,6 +1,13 @@
+.comment-content {
+	color: $medgray;
+}
+
 .comment-content a {
 	word-wrap: break-word;
 }
 .bypostauthor {
 	display: block;
+}
+.comment-form-comment {
+	color: $medgray;
 }
