--- a/wp-content/themes/stacylauren/sass/forms/_fields.scss
+++ b/wp-content/themes/stacylauren/sass/forms/_fields.scss
@@ -29,4 +29,11 @@ select {
 
 textarea {
 	width: 100%;
+	#comment {
+		border-style: none !important;
+	}
+}
+
+textarea#comment {
+    border-style: none;
 }
