--- a/wp-content/themes/stacylauren/sass/site/primary/_comments.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_comments.scss
@@ -11,3 +11,16 @@
 .comment-form-comment {
 	color: $medgray;
 }
+
+ol.comment-list {
+	margin: 0 0 1em 0;
+	padding: 0;
+	li {
+		margin: 0 0 1em 0;
+		padding: 0;
+	}
+}
+
+.comment-author {
+	color: $green;
+}
