--- a/wp-content/themes/stacylauren/style.css
+++ b/wp-content/themes/stacylauren/style.css
@@ -831,7 +831,7 @@ input[type="datetime"]:focus,
 input[type="datetime-local"]:focus,
 input[type="color"]:focus,
 textarea:focus {
-	color: #78A22F;
+	color: black;
 }
 
 select {
@@ -1031,7 +1031,8 @@ textarea#comment {
 /*}*/
 .bg {
 	width: 100vw;
-	/*height: 100vh;*/
+	height: 100vh;
+	/*had turned off to fix issue in mobile, can't figuer out problem*/
 	background: url(img/bg3.png) repeat;
 	/*background-size: 75px 75px;*/
 	z-index: 100;
