--- a/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
+++ b/wp-content/themes/stacylauren/sass/site/primary/_posts-and-pages.scss
@@ -324,6 +324,7 @@ ul.post-categories {
 }
 
 .view-project {
+  margin-top: 1em !important;
   text-transform: uppercase;
   text-align: center;
   letter-spacing: .1em;
@@ -386,3 +387,4 @@ ul.post-categories {
 	   text-decoration:none;
 	}
 }
+
